trying to add image

--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
        
     </head>
     <body>
+        <div class="background-image"></div>
         <h1>WordSearch</h1>
         <h2 id = "currentWord"></h2>
         <p id="countdown"></p>
         <table>
             <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td class='milestone'>M</td>
                 <td class='milestone'>I</td>
                 <td class='milestone'>L</td>
@@ -24,13 +31,7 @@
                 <td class='milestone'>O</td>
                 <td class='milestone'>N</td>
                 <td class='milestone'>E</td>
-                <td class='milestone'>P</td>
-                <td class='milestone'>R</td>
-                <td class='milestone'>O</td>
-                <td class='milestone'>J</td>
-                <td class='milestone'>E</td>
-                <td class='milestone'>C</td>
-                <td class='milestone'>T</td>
+                <td>T</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -63,7 +64,6 @@
                 <td class='terminal'>E</td>
                 <td></td>
                 <td></td>
-                <td class='zoom'>Z</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -74,6 +74,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td class='slack'>S</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -86,7 +87,6 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class='zoom'>O</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -97,6 +97,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td class='slack'>L</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -105,11 +106,12 @@
             <tr>
                 <td></td>
                 <td class='terminal'>M</td>
+                <td></td>
+                <td></td>
                 <td class='coffee'>C</td>
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class='zoom'>O</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -118,8 +120,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td class='slack'>A</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -127,12 +128,13 @@
             <tr>
                 <td></td>
                 <td class='terminal'>I</td>
+                <td></td>
+                <td></td>
                 <td class='coffee'>O</td>
                 <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class='zoom'>M</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -141,14 +143,15 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td class='slack'>C</td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
                 <td class='terminal'>N</td>
+                <td></td>
+                <td></td>
                 <td class='coffee'>F</td>
                 <td></td>
                 <td></td>
@@ -163,15 +166,18 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class='slack'>K</td>
                 <td></td>
             </tr>
             <tr>
                 <td></td>
                 <td class='terminal'>A</td>
+                <td></td>
+                <td></td>
                 <td class='coffee'>F</td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td class='github'>G</td>
                 <td class='github'>I</td>
                 <td class='github'>T</td>
@@ -184,18 +190,36 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <td></td>
                 <td class='terminal'>L</td>
+                <td></td>
+                <td></td>
                 <td class='coffee'>E</td>
                 <td></td>
                 <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td class='zoom'>Z</td>
+                <td class='coffee'>E</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -215,31 +239,9 @@
             <tr>
                 <td></td>
                 <td></td>
-                <td class='coffee'>E</td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class='zoom'>O</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -262,7 +264,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
+                <td class='zoom'>O</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -285,7 +287,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
+                <td class='zoom'>M</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -305,7 +307,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class='slack'>S</td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -328,12 +330,12 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class='slack'>L</td>
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td class='css'>C</td>
+                <td class='css'>S</td>
+                <td class='css'>S</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -351,7 +353,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class='slack'>A</td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -361,8 +363,8 @@
                 <td></td>
                 <td></td>
                 <td class='javascript'>C</td>
-                <td class='css'>S</td>
-                <td class='css'>S</td>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -374,7 +376,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class='slack'>C</td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -456,24 +458,30 @@
             </tr>
         </table>
         <ol>
-            <ol>
-                <li>Computers hardware device to enter data and command lines?</li>
-                <li>Where we meet for our group video chats?</li>
-                <li>Website we made repository on?</li>
-                <li>What beverage got me through all of this?</li>
-                <li>Name of the first project?</li>
-                <li>Abbreviation for HyperText Markup Language?</li>
-                <li>What makes a web page interactive?</li>
-                <li>Where do you style your webpage?</li>
-                <li>Application for us to communicate on?</li>
-                <li>Device we type on?</li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ol>
+            <li>Computers hardware device to enter data and command lines?</li>
+            <li>Where we meet for our group video chats?</li>
+            <li>Website we made repository on?</li>
+            <li>What beverage got me through all of this?</li>
+            <li>Name of the first project?</li>
+            <li>Abbreviation for HyperText Markup Language?</li>
+            <li>What makes a web page interactive?</li>
+            <li>Where do you style your webpage?</li>
+            <li>Application for us to communicate on?</li>
+            <li>Device we type on?</li>
         </ol>
     </body>
      <script type = "text/javascript" src = "script.js"></script>
+     <!-- <style>
+        /* * {
+            margin: 0;
+            padding: 0;
+         }
+        .background-image {
+            background-image: url('./double-bubble-outline.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            /* width:  200px; */
+            height: 100vh;
+        } */
+        </style> -->
 </html>
