--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" href="styles.css">
        
     </head>
-    <body>
-        <div class="background-image"></div>
+    <body class="background-image">
+        <div></div>
         <h1>WordSearch</h1>
         <h2 id = "currentWord"></h2>
         <p id="countdown"></p>
@@ -459,29 +459,25 @@
         </table>
         <ol>
             <li>Computers hardware device to enter data and command lines?</li>
+            <li></li>
             <li>Where we meet for our group video chats?</li>
+            <li></li>
             <li>Website we made repository on?</li>
+            <li></li>
             <li>What beverage got me through all of this?</li>
+            <li></li>
             <li>Name of the first project?</li>
+            <li></li>
             <li>Abbreviation for HyperText Markup Language?</li>
+            <li></li>
             <li>What makes a web page interactive?</li>
+            <li></li>
             <li>Where do you style your webpage?</li>
+            <li></li>
             <li>Application for us to communicate on?</li>
+            <li></li>
             <li>Device we type on?</li>
         </ol>
     </body>
      <script type = "text/javascript" src = "script.js"></script>
-     <!-- <style>
-        /* * {
-            margin: 0;
-            padding: 0;
-         }
-        .background-image {
-            background-image: url('./double-bubble-outline.png');
-            background-size: cover;
-            background-repeat: no-repeat;
-            /* width:  200px; */
-            height: 100vh;
-        } */
-        </style> -->
 </html>
