updated image and README file

--- a/index.html
+++ b/index.html
@@ -458,25 +458,27 @@
             </tr>
         </table>
         <ol>
-            <li>Computers hardware device to enter data and command lines?</li>
             <li></li>
-            <li>Where we meet for our group video chats?</li>
             <li></li>
-            <li>Website we made repository on?</li>
+            <li>1. Computers hardware device to enter data and command lines?</li>
             <li></li>
-            <li>What beverage got me through all of this?</li>
+            <li>2. Where we meet for our group video chats?</li>
             <li></li>
-            <li>Name of the first project?</li>
+            <li>3. Website we made repository on?</li>
             <li></li>
-            <li>Abbreviation for HyperText Markup Language?</li>
+            <li>4. What beverage got me through all of this?</li>
             <li></li>
-            <li>What makes a web page interactive?</li>
+            <li>5. Name of the first project?</li>
             <li></li>
-            <li>Where do you style your webpage?</li>
+            <li>6. Abbreviation for HyperText Markup Language?</li>
             <li></li>
-            <li>Application for us to communicate on?</li>
+            <li>7. What makes a web page interactive?</li>
             <li></li>
-            <li>Device we type on?</li>
+            <li>8. Where do you style your webpage?</li>
+            <li></li>
+            <li>9. Application for us to communicate on?</li>
+            <li></li>
+            <li>10. Device we type on?</li>
         </ol>
     </body>
      <script type = "text/javascript" src = "script.js"></script>
